Fix spacing between sections

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -15,8 +15,8 @@ h2 {
 }
 
 div.section {
-    margin: 0 5px;
-    padding: 10px;
+    margin: 10px 5px;
+    padding: 5px;
     position: relative;
 
     div.options {
